# nexar-collision-prediction

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: EDA.ipynb  process_data.ipynb  train_single_model.ipynb
src/nexar/: data.py  model.py
