[tool.poetry]
name = "nexar-collision-prediction"
version = "0.1.0"
description = "Predict car collisions from dashcam footage before they happen!"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.7.0"
torchvision = "^0.22.0"
timm = "^1.0.15"
pytorch-lightning = "^2.5.1.post0"
opencv-python = "^4.11.0.86"
numpy = "^2.2.5"
pandas = "^2.2.3"
tqdm = "^4.67.1"
ultralytics = "^8.3.132"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
